import org.springframework.boot.gradle.tasks.run.BootRun

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.GreenThumb.api'
version = '0.1.0'
description = 'Back du site web qui gére des plantes'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2025.0.0")
	set('springModulithVersion', "1.4.3")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-undertow'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	implementation 'org.springframework.modulith:spring-modulith-starter-core'
	implementation 'org.springframework.modulith:spring-modulith-starter-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'com.h2database:h2'
	implementation 'org.springframework.modulith:spring-modulith-docs'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.springframework.boot:spring-boot-configuration-processor'
	implementation 'org.passay:passay:1.6.6'
	implementation 'io.jsonwebtoken:jjwt-api:0.12.7'
	implementation 'de.mkammerer:argon2-jvm:2.11'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'io.lettuce:lettuce-core'
	implementation 'org.springframework.boot:spring-boot-starter-mail'


	compileOnly 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'org.springframework.modulith:spring-modulith-actuator'
	runtimeOnly 'org.springframework.modulith:spring-modulith-observability'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.7'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.7'

	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.xerial:sqlite-jdbc:3.46.0.0'
	testImplementation 'org.hibernate.orm:hibernate-community-dialects:6.6.0.Final'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	modules {
		module("org.springframework.boot:spring-boot-starter-reactor-netty") {
			replacedBy("org.springframework.boot:spring-boot-starter-undertow", "Use Undertow instead of Reactor Netty")
		}
	}
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.modulith:spring-modulith-bom:${springModulithVersion}"
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

springBoot {
	mainClass = 'com.GreenThumb.api.BackApplication'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

jacoco {
	toolVersion = "0.8.12"
}

jacocoTestReport {
	dependsOn test
	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}

	afterEvaluate {
		classDirectories.setFrom(files(classDirectories.files.collect {
			fileTree(dir: it, exclude: [
				'**/config/**',
				'**/dto/**',
				'**/entity/**',
				'**/exception/**',
				'**/objectValue/**',
				'**/BackApplication.class'
			])
		}))
	}
}

jacocoTestCoverageVerification {
	violationRules {
		rule {
			limit {
				minimum = 0.70
			}
		}
	}
}

tasks.named('bootRun') {
	args = ['--spring.profiles.active=dev']
}

tasks.register('bootRunProd', BootRun) {
	group = 'application'
	description = 'Lance l\'application avec le profil prod'
	classpath = sourceSets.main.runtimeClasspath
	mainClass.set('com.GreenThumb.api.BackApplication')

	systemProperty 'spring.profiles.active', 'prod'
}

tasks.register('bootRunStanging', BootRun) {
	group = 'application'
	description = 'Lance l\'application avec le profil stanging'
	classpath = sourceSets.main.runtimeClasspath
	mainClass.set('com.GreenThumb.api.BackApplication')

	systemProperty 'spring.profiles.active', 'staging'
}

